Script execution flags edited.