@@ -1,8 +1,11 @@
 #!/bin/bash
 
-java -Xms128m -Xmx4G \
-    -classpath lib/antlr-4.7-complete.jar:lib/aptell.jar \
-    aptell.antlr4.JavaProcessor $1 $2
+java -server -d64 \
+     -Xshare:off -XX:+UseCompressedOops \
+     -XX:+AggressiveOpts -XX:+DoEscapeAnalysis \
+     -Xms128M -Xmx4G -XX:+UseParallelGC -XX:+UseParallelOldGC \
+     -classpath lib/antlr-4.7-complete.jar:lib/aptell.jar \
+     aptell.antlr4.JavaProcessor $1 $2
 
 # Running
 # bin/process-java.sh srcDir targetDir
